--- a/src/app/feature/components/footer/footer.component.html
+++ b/src/app/feature/components/footer/footer.component.html
@@ -8,35 +8,17 @@
         </div>
         <div class="footer-row">
             <ul>
-                <li class="footer-colum-item">Telefono:3#######</li>
-                <li class="footer-colum-item">Correo:ejemplo@ejemplo.com</li>
-                <li class="footer-colum-item">Formulario:</li>
+                <li class="footer-colum-item">Telefono: +57 300 6953131</li>
+                <li class="footer-colum-item">rrrodriguezl@emavi.edu.co</li>
+                <!-- <li class="footer-colum-item">Formulario:</li> -->
             </ul>
         </div>
     </div>
     <div class="footer-colum">
-        <div class="footer-row title">
-            <span>Sobre Nosotros</span>
-        </div>
-        <div class="footer-row">
-            <ul>
-                <li class="footer-colum-item">Mision y vision</li>
-                <li class="footer-colum-item">Equipo de expertos en medio ambiente</li>
-                <li class="footer-colum-item">Historia y compromiso con la educacion ambiental</li>
-            </ul>
-        </div>
+
     </div>
     <div class="footer-colum">
-        <div class="footer-row title">
-            <span>Siguenos en Redes Sociales</span>
-        </div>
-        <div class="footer-row">
-            <ul>
-                <li class="footer-colum-item">Facebook</li>
-                <li class="footer-colum-item">Twitter</li>
-                <li class="footer-colum-item">Instagram</li>
-            </ul>
-        </div>
+
     </div>
 </div>
 <div class="derechos">
