--- a/src/app/feature/components/navbar-client/navbar-client.component.html
+++ b/src/app/feature/components/navbar-client/navbar-client.component.html
@@ -15,7 +15,7 @@
     <div
       class="mr-4 w-[85px] h-full flex justify-center items-center text-[#808080] hover:text-[#33cc57] lg:w-1/4 lg:mr-4"
       [class.my-learning]="isMyLearningRoute">
-      <button class="w-full ">Mis cursos</button>
+      <button class="w-full ">Mis Temáticas</button>
     </div>
   </div>
   <div class=" profile-name flex h-[70px] justify-center items-center lg:flex lg:items-center">
