--- a/src/app/feature/components/navbar/navbar.component.scss
+++ b/src/app/feature/components/navbar/navbar.component.scss
@@ -58,7 +58,7 @@ a{
     }
 
     .logo {
-        background-image: url('../../../../assets/AMBIEFAC_LOGO.png');
+        background-image: url('../../../../assets/AMBIEFACAPP/AMBIEFAC.png');
         background-size: contain;
         background-repeat: no-repeat;
         margin: 0 20px;
