--- a/src/app/feature/home/temas-inscripcion/temas-inscripcion.component.html
+++ b/src/app/feature/home/temas-inscripcion/temas-inscripcion.component.html
@@ -25,11 +25,11 @@
                 </ul>
             </div>
             <div class="information-topic-row join-up-topic">
-                <span>Únete a nosotros y sé parte del cambio hacia un futuro más verde. ¡Inscríbete ahora y haz la
+                <span>Únete a nosotros y sé parte del cambio hacia un futuro más verde. ¡Comienza Ya y haz la
                     diferencia!</span>
             </div>
             <div class="information-topic-row button-incription-topic">
-                <button class="button-inscription" (click)="navegarAInformacion()">¡Inscríbete ahora!</button>
+                <button class="button-inscription" (click)="navegarAInformacion()">¡Comienza Ya!</button>
             </div>
         </div>
         <div class="information-topic-colum duration">
