--- a/src/app/Shared/components/shared-table/shared-table.component.html
+++ b/src/app/Shared/components/shared-table/shared-table.component.html
@@ -2,7 +2,7 @@
   <thead>
     <tr class="bg-[#22c55e] text-center">
       <th class="w-1/6 min-w-[160px] text-lg font-semibold text-white py-3 px-3 lg:px-4 border-l border-transparent">
-        Nombre del Curso
+        Nombre de la temática
       </th>
       <th class="w-1/6 min-w-[160px] text-lg font-semibold text-white py-3 px-3 lg:px-4">
         Duración
