--- a/src/app/feature/academy/client/components/mi-aprendizaje/mi-aprendizaje.component.html
+++ b/src/app/feature/academy/client/components/mi-aprendizaje/mi-aprendizaje.component.html
@@ -45,7 +45,7 @@ fondo2 flex flex-col items-center justify-center text-white">
       </svg>
       <div class="flex flex-col justify-center ml-3">
         <span>4</span>
-        <p>Cursos completados</p>
+        <p>Temáticas completadas</p>
       </div>
     </div>
   </div>
@@ -55,8 +55,8 @@ fondo2 flex flex-col items-center justify-center text-white">
   <section class="w-full lg:w-[90%] border flex flex-col gap-4" *ngIf="response.success">
     <div class="container mx-auto p-4  scrollContent">
       <app-tabs-client [tabs]="tabs" (tabSelected)="onTabSelected($event)">
-        <div *ngIf="selectedTab === 'perfil'"><app-perfil [data]="response.data"></app-perfil></div>
-        <div *ngIf="selectedTab === 'cursos'"><app-client-cursos></app-client-cursos></div>
+        <div *ngIf="selectedTab === 'Perfil'"><app-perfil [data]="response.data"></app-perfil></div>
+        <div *ngIf="selectedTab === 'Tematicas'"><app-client-cursos></app-client-cursos></div>
       </app-tabs-client>
     </div>
   </section>
