--- a/src/app/feature/academy/learning/components/course/course.component.html
+++ b/src/app/feature/academy/learning/components/course/course.component.html
@@ -6,7 +6,7 @@
         <ng-container *ngSwitchCase="'text'">
           <section [id]="i">
             <h2>{{ item.title }}</h2>
-            <p>{{ item.content }}</p>
+            <p class="text-jump">{{ item.content }}</p>
           </section>
         </ng-container>
         <ng-container *ngSwitchCase="'image'">
@@ -37,7 +37,7 @@
   <div *ngIf="index.mainIndex === -1" class="animate-fade-down">
     <div class="parallax-container" [style.backgroundImage]="'url(' + data.linkImage+ ')'">
       <div class="content">
-        <h1>{{data.name}}</h1>
+        <h1 class="text-with-shadow">{{data.name}}</h1>
       </div>
     </div>
     <div class="my-[10%] px-[10%] py-[10%] border-b-2 border-t-2 bg-[#fbfbfb] ">
