--- a/src/app/feature/home/inicio/inicio.component.html
+++ b/src/app/feature/home/inicio/inicio.component.html
@@ -3,16 +3,13 @@
         class="w-full flex flex-col-reverse md:flex-row !mb-[14%] !m-0 p-0 animate-fade-up parallax-container text-white">
         <div class="w-full md:w-[50%] flex flex-col gap-4 justify-center items-center">
             <div class="flex flex-col items-start gap-1">
-                <h1 class="!text-header  md:text-4xl  lg:text-5xl">AMBIEFAC</h1>
-                <h2 class="text-lg md:text-xl lg:text-2xl">Descubre, Aprende y Transforma Tu Mundo</h2>
-                <p class="text-sm md:text-base lg:text-lg">Descubres, aprendes y transformas tu mundo hacia un futuro
-                    más
-                    sostenible.</p>
+                <h1 class="!text-header  md:text-4xl  lg:text-5xl text-with-shadow title-ambiefac">AMBIEFAC</h1>
+                <h2 class="text-lg md:text-xl lg:text-2xl text-with-shadow">Descubre, Aprende y Transforma Tu Mundo</h2>
             </div>
             <div class="mt-4">
                 <button (click)="redirecToRegister()"
                     class="w-[16rem] md:w-[20rem] text-base md:text-lg h-[2.7rem] md:h-[3rem] rounded-full  bg-[#33cc57] text-white font-bold shadow-lg">
-                    ¡Inscríbete ahora!
+                    ¡Comienza Ya!
                 </button>
             </div>
         </div>
@@ -24,12 +21,12 @@
             <div class="w-[80%] h-full flex flex-row items-center justify-center m-[20%]">
                 <div class="w-1/2 mx-4  text-5xl">
                     <h1 class="text-5xl font-bold mb-4">¿Qué es Ambiefac?</h1>
-                    <p class="text-xl">Ambiefac es una plataforma educativa dedicada a la promoción de la conciencia
-                        ambiental y la sostenibilidad. Nos esforzamos por ofrecer una amplia variedad de cursos
-                        diseñados
+                    <p class="text-xl">Ambiefac es una plataforma dedicada a la promoción de la conciencia
+                        ambiental y la sostenibilidad. Nos esforzamos por ofrecer tematicas
+                        diseñadas
                         para empoderar a las personas con el conocimiento necesario para comprender, preservar y mejorar
                         nuestro entorno.</p>
-                    <p class="text-xl">Desde cursos gratuitos hasta recursos avanzados, nuestro compromiso es brindar
+                    <p class="text-xl">Nuestro compromiso es brindar
                         oportunidades de aprendizaje que inspiren a la acción positiva. Únete a nosotros en nuestro
                         viaje
                         hacia un futuro más verde y sostenible.</p>
@@ -37,7 +34,7 @@
                 <div class="w-1/2 flex flex-col items-center">
                     <button (click)=" redirecToCursos()"
                         class="w-[16rem] md:w-[20rem] text-base md:text-lg h-[2.7rem] md:h-[3rem] rounded-full  bg-[#33cc57] text-white font-bold shadow-lg mt-8">
-                        ¡Explora Nuestros Cursos!
+                        ¡Explora Nuestras temáticas!
                     </button>
                 </div>
             </div>
@@ -50,22 +47,22 @@
         <div class="w-full md:w-1/2 flex flex-col justify-around items-center">
             <div class="w-full flex overflow-hidden justify-center">
                 <img class="!w-full !h-[500px] !max-w-full object-cover"
-                    src="../.../../../../../assets/personas_aprendiendo.png" alt="">
+                    src="../.../../../../../assets/AMBIEFACAPP/VISTA PRINCIPAL DESCUBRE.jpg" alt="">
             </div>
         </div>
         <div
             class="w-full md:w-1/2 flex flex-col justify-center items-start px-4 bg-[#33CC57] text-white shadow-md gap-5">
             <div>
-                <h1 class="font-bold text-2xl">Descubre Nuestros Cursos Gratis</h1>
+                <h1 class="font-bold text-2xl">Descubre Nuestras tematicas</h1>
             </div>
             <div class="w-full md:w-4/5 text-justify text-3xl">
                 <p>Aprovecha la oportunidad de mejorar tus habilidades con nuestra selección de
-                    cursos gratuitos. Amplía tu conocimiento y avanza en tu carrera sin costo alguno.</p>
+                    temas. Amplía tu conocimiento y avanza en tu compromiso con el medio ambiente.</p>
             </div>
         </div>
     </section>
 
-    <section id="sobre-nosotros"  class="w-full !my-[14%] animate-fade-up animate-normal">
+    <section id="sobre-nosotros" class="w-full !my-[14%] animate-fade-up animate-normal">
         <div class="content-sobre-nosotros">
             <div class="w-[80%] h-full flex flex-row items-center justify-center m-[20%]">
                 <div class="w-1/2 mx-4 text-5xl">
@@ -74,18 +71,13 @@
                         sostenibilidad. Nuestra misión es proporcionar una plataforma educativa donde las personas
                         puedan
                         aprender, inspirarse y tomar medidas para un futuro más ecológico.</p>
-                    <p class="text-xl">Nos esforzamos por ofrecer una amplia gama de cursos, desde conceptos básicos
-                        hasta
-                        avanzados, que abarquen diversas áreas relacionadas con el medio ambiente. Creemos en la
-                        capacitación y empoderamiento de las personas para que se conviertan en defensores activos de
-                        nuestro planeta.</p>
-                    <p class="text-xl">Explora nuestras opciones de aprendizaje, desde cursos gratuitos hasta recursos
-                        premium, y únete a nosotros en la misión de crear un mundo más verde y sostenible. ¡Juntos
-                        podemos marcar la diferencia!</p>
+                    <p class="text-xl">Nuestro compromiso es brindar oportunidades de aprendizaje que inspiren a la
+                        acción positiva únete a nosotros hacía un viaje más verde y Sostenible.</p>
+                    <p class="text-xl">Nos esforzamos a que avances en tu compromiso con el medio ambiente.</p>
                 </div>
                 <div class="w-1/2 flex flex-col items-center">
-                    <img src="../.../../../../../assets/nuestro_equipo_imagen.png" alt="Nuestro Equipo"
-                        class="rounded-md !h-[310px]">
+                    <img src="../.../../../../../assets/AMBIEFACAPP/VISTA PRINCIPAL IMAGEN 3 SOBRE NOSOTROS.jpg"
+                        alt="Nuestro Equipo" class="rounded-md !h-[310px]">
                 </div>
             </div>
         </div>
@@ -98,8 +90,8 @@
                     <h1 class="text-4xl mb-4">Acelera Tu Aprendizaje</h1>
                     <p class="text-gray-700">Aprovecha la oportunidad de impulsar tu aprendizaje con nuestra selección
                         de
-                        recursos y cursos diseñados para acelerar tu crecimiento. Descubre nuevas habilidades y avanza
-                        rápidamente en tu camino hacia el éxito.</p>
+                        recursos y tematicas diseñadas para acelerar tu crecimiento. Descubre nuevas habilidades y avanza
+                        rápidamente en tu camino hacia el cuidado del medio ambiente.</p>
                 </div>
                 <div class="w-1/2">
                     <img src="../.../../../../../assets/wepik-export-20240102185507bjIA.png" alt="Imagen"
@@ -109,40 +101,21 @@
         </div>
     </section>
 
-    <section id="cursos-medio-ambiente" class="w-full !my-[14%] animate-fade-up animate-normal">
-        <div class="w-full flex flex-col gap-4 items-center justify-center">
-            <div class="cursos-row my-4">
-                <h1 class="text-2xl">Explore nuestros cursos sobre el Medio Ambiente</h1>
-            </div>
-            <div class="w-full flex flex-col md:flex-row md:justify-around ">
-                <div *ngFor="let course of courses"
-                    class="w-full md:w-[25%] h-[500px] border shadow-md flex flex-col justify-center items-center gap-2 hover:animate-jump animate-normal">
-
-                    <img [src]="course.image" alt="Imagen del curso" class="!h-[250px] w-full max-w-full">
-
-                    <div class="items-start w-full px-4 mt-2">
-                        <h2 class="font-bold text-md ">{{ course.title }}</h2>
-                    </div>
-                    <div class="flex items-center w-full text-[18px] px-4">
-                        <p>{{ course.description }}</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    
+    
 
     <section id="comenzar">
         <div class="content-comenzar  animate-fade-up animate-normal">
             <div class="w-[80%] h-full flex flex-row items-center justify-center m-[20%]">
                 <div class="w-1/2 mx-4 text-white text-5xl">
-                    <p class=""> Cuidar el planeta no es solo un deber, es una oportunidad para construir un futuro
+                    <h2 class=""> Cuidar el planeta no es solo un deber, es una oportunidad para construir un futuro
                         sostenible y
-                        próspero para las generaciones venideras.</p>
+                        próspero para las generaciones venideras.</h2>
                 </div>
                 <div class="w-1/2 flex flex-col">
                     <button (click)="redirecToRegister()"
                         class="w-[16rem] md:w-[20rem] text-base md:text-lg h-[2.7rem] md:h-[3rem] rounded-full  bg-[#33cc57] text-white font-bold shadow-lg">
-                        ¡Inscríbete ahora!
+                        ¡Comienza Ya!
                     </button>
                 </div>
             </div>
