--- a/src/app/feature/home/inicio/inicio.component.scss
+++ b/src/app/feature/home/inicio/inicio.component.scss
@@ -35,12 +35,18 @@ button:hover {
   }
 }
 
-
+.title-ambiefac{
+  font-size: 5rem;
+}
 
 h1 {
-  font-size: 2.3rem;
+  font-size: 2.5rem;
   margin-bottom: 10px;
   font-weight: bold;
+}
+
+.text-with-shadow {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
 }
 
 .text-header {
@@ -53,7 +59,7 @@ h1 {
 
 h2 {
   font-size: 1.8rem;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   font-weight: normal;
 }
 
@@ -64,7 +70,9 @@ h2 {
 // }
 
 
-
+p{
+  text-align: justify;
+}
 
 .content-comenzar {
   height: 100vh;
@@ -114,7 +122,7 @@ h2 {
   height: 100vh;
   overflow: hidden;
   position: relative;
-  background-image: url('../.../../../../../assets/Pantalla\ de\ fondo.png');
+  background-image: url('../.../../../../../assets/PANTALLA_INICIO_AMBIEFAC.jpg');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -133,5 +141,3 @@ h2 {
   cursor: pointer;
   display: none;
 }
-
-
