--- a/src/app/feature/components/navbar-client/navbar-client.component.scss
+++ b/src/app/feature/components/navbar-client/navbar-client.component.scss
@@ -6,7 +6,7 @@ div.my-learning {
 }
 
 div.my-learning:hover {
-  border-bottom: 4px solid #33cc57;
+  border-bottom: 4px solid #2cc04f;
 }
 
 .border-right-icon {
