--- a/src/app/feature/home/cursos/cursos.component.html
+++ b/src/app/feature/home/cursos/cursos.component.html
@@ -1,25 +1,21 @@
-<div class="header-topic">
-    <div class="header-topic-row">
-        <div class="header-topic-colum tile-topic">
-            <h1>Temáticas</h1>
-            <div class="text-lg">
-                <div class="text-xl">
-                    <p class="text-2xl">Explora y Aprende: <span class="font-bold text-3xl">Temáticas para un
-                            futuro sostenible</span></p>
-                    <p class="text-lg" style="font-weight: 400;">Encontrarás temáticas centradas en la conservación del medio ambiente.
-                        Desde el Uso racional de Recursos, Manejo integral de los Residuos Sólidos, Calentamiento global, Tráfico ilegal de especies de flora y fauna, ofrecemos una variedad de temáticas para
-                        profundizar tu comprensión y habilidades en temas ambientales clave. Explora nuestras opciones
-                        educativas y únete a nosotros en el camino hacia un futuro más sostenible.</p>
-                </div>
+<div class="header-topic">   
+        <div class="header-topic-colum tile-topic"> 
+            <div class="col-6  truncated backg">
+                <h1 class="color-blanco" style="font-size: 40px;">Temáticas</h1>
+                <p class="text-2xl" style="color: white;">Explora y Aprende: <span
+                        class=" text-3xl color-blanco">Temáticas para un
+                        futuro sostenible</span></p>
+                <p style="font-weight: 20; color: white; font-size: 15px; text-align: justify;">Encontrarás
+                    temáticas centradas en la conservación del medio ambiente.
+                    Desde el Uso racional de Recursos, Manejo integral de los Residuos Sólidos, Calentamiento
+                    global, Tráfico ilegal de especies de flora y fauna, ofrecemos una variedad de temáticas
+                    para
+                    profundizar tu comprensión y habilidades en temas ambientales clave. Explora nuestras
+                    opciones
+                    educativas y únete a nosotros en el camino hacia un futuro más sostenible.</p>
 
             </div>
-
         </div>
-        <div class="header-topic-colum image-topic">
-            <img style="height: 70vh;"
-                src="../../../../assets/Tematicas.jpg" alt="">
-        </div>
-    </div>
 </div>
 
 <div class="cursos-content">
