--- a/src/app/feature/home/inicio/inicio.component.html
+++ b/src/app/feature/home/inicio/inicio.component.html
@@ -8,7 +8,7 @@
             </div>
             <div class="mt-4">
                 <button (click)="redirecToRegister()"
-                    class="w-[16rem] md:w-[20rem] text-base md:text-lg h-[2.7rem] md:h-[3rem] rounded-full  bg-[#33cc57] text-white font-bold shadow-lg">
+                    class="w-[16rem] md:w-[20rem] text-base md:text-lg h-[2.7rem] md:h-[3rem] rounded-full  bg-[#2cc04f] text-white font-bold shadow-lg">
                     ¡Comienza Ya!
                 </button>
             </div>
@@ -33,7 +33,7 @@
                 </div>
                 <div class="w-1/2 flex flex-col items-center">
                     <button (click)=" redirecToCursos()"
-                        class="w-[16rem] md:w-[20rem] text-base md:text-lg h-[2.7rem] md:h-[3rem] rounded-full  bg-[#33cc57] text-white font-bold shadow-lg mt-8">
+                        class="w-[16rem] md:w-[20rem] text-base md:text-lg h-[2.7rem] md:h-[3rem] rounded-full  bg-[#2cc04f] text-white font-bold shadow-lg mt-8">
                         ¡Explora Nuestras temáticas!
                     </button>
                 </div>
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div
-            class="w-full md:w-1/2 flex flex-col justify-center items-start px-4 bg-[#33CC57] text-white shadow-md gap-5">
+            class="w-full md:w-1/2 flex flex-col justify-center items-start px-4 bg-[#2cc04f] text-white shadow-md gap-5">
             <div>
                 <h1 class="font-bold text-2xl">Descubre Nuestras tematicas</h1>
             </div>
@@ -110,11 +110,11 @@
                 <div class="w-1/2 mx-4 text-white text-5xl">
                     <h2 class=""> Cuidar el planeta no es solo un deber, es una oportunidad para construir un futuro
                         sostenible y
-                        próspero para las generaciones venideras.</h2>
+                        próspero para las generaciones futuras.</h2>
                 </div>
                 <div class="w-1/2 flex flex-col">
                     <button (click)="redirecToRegister()"
-                        class="w-[16rem] md:w-[20rem] text-base md:text-lg h-[2.7rem] md:h-[3rem] rounded-full  bg-[#33cc57] text-white font-bold shadow-lg">
+                        class="w-[16rem] md:w-[20rem] text-base md:text-lg h-[2.7rem] md:h-[3rem] rounded-full  bg-[#2cc04f] text-white font-bold shadow-lg">
                         ¡Comienza Ya!
                     </button>
                 </div>
