--- a/src/app/feature/home/temas-contenido/temas-contenido.component.scss
+++ b/src/app/feature/home/temas-contenido/temas-contenido.component.scss
@@ -26,7 +26,7 @@ body {
 }
 
 .tile-topic {
-    background-color: #33cc57;
+    background-color: #2cc04f;
     display: flex;
     flex-direction: column;
     height: 70vh;
