--- a/src/app/feature/academy/client/components/mi-aprendizaje/mi-aprendizaje.component.html
+++ b/src/app/feature/academy/client/components/mi-aprendizaje/mi-aprendizaje.component.html
@@ -44,7 +44,9 @@ fondo2 flex flex-col items-center justify-center text-white">
           fill="#FFECEC" />
       </svg>
       <div class="flex flex-col justify-center ml-3">
-        <span>4</span>
+        <span>
+          {{scoreT}}
+        </span>
         <p>Temáticas completadas</p>
       </div>
     </div>
@@ -54,10 +56,7 @@ fondo2 flex flex-col items-center justify-center text-white">
 <section class="w-full flex flex-col lg:flex-row justify-center  gap-2 my-4 h-screm">
   <section class="w-full lg:w-[90%] border flex flex-col gap-4" *ngIf="response.success">
     <div class="container mx-auto p-4  scrollContent">
-      <app-tabs-client [tabs]="tabs" (tabSelected)="onTabSelected($event)">
-        <div *ngIf="selectedTab === 'Perfil'"><app-perfil [data]="response.data"></app-perfil></div>
-        <div *ngIf="selectedTab === 'Tematicas'"><app-client-cursos></app-client-cursos></div>
-      </app-tabs-client>
+      <app-client-cursos></app-client-cursos>
     </div>
   </section>
 </section>
