--- a/src/app/feature/academy/client/components/tabs-client/tabs-client.component.html
+++ b/src/app/feature/academy/client/components/tabs-client/tabs-client.component.html
@@ -4,7 +4,7 @@
     <div *ngFor="let tab of tabs" class="flex-none w-full sm:w-1/2 md:w-1/3 lg:w-1/5 xl:w-1/6 cursor-pointer p-2 border-r-2"
       [class.border-bottom-tabs]="selectedTab === tab.label" (click)="selectTab(tab.label)">
       <div class="flex flex-row items-center justify-center">
-        <i [ngClass]="tab.icon" class="mr-4 text-[20px] text-[#33cc57]"></i>
+        <i [ngClass]="tab.icon" class="mr-4 text-[20px] text-[#2cc04f]"></i>
         <p>{{ tab.label }}</p>
       </div>
     </div>
