--- a/src/app/feature/components/navbar-client/navbar-client.component.html
+++ b/src/app/feature/components/navbar-client/navbar-client.component.html
@@ -13,7 +13,7 @@
   </div> -->
   <div class="w-[75%] h-[50px] flex border-r-2 justify-end items-center ">
     <div
-      class="mr-4 w-[85px] h-full flex justify-center items-center text-[#808080] hover:text-[#33cc57] lg:w-1/4 lg:mr-4"
+      class="mr-4 w-[85px] h-full flex justify-center items-center text-[#808080] hover:text-[#2cc04f] lg:w-1/4 lg:mr-4"
       [class.my-learning]="isMyLearningRoute">
       <button class="w-full ">Mis Temáticas</button>
     </div>
@@ -31,7 +31,7 @@
           </path>
         </g>
       </svg>
-      <label class="text-[#808080] hover:text-[#33cc57] cursor-pointer" for="">{{response.data.fullName}}</label>
+      <label class="text-[#808080] hover:text-[#2cc04f] cursor-pointer" for="">{{response.data.fullName}}</label>
       <div class="relative inline-block text-left">
         <div>
           <button type="button" (click)="toggleUserDropdown()"
