--- a/src/app/feature/home/inicio/inicio.component.scss
+++ b/src/app/feature/home/inicio/inicio.component.scss
@@ -79,7 +79,7 @@ p{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-image: url('../../../../assets/cuidadno_el_planeta.jpeg');
+  background-image: url('../../../../assets/Cuidar_el_planeta.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -101,7 +101,7 @@ p{
       width: 18rem;
       height: 47px;
       border-radius: 50px;
-      background-color: #33cc57;
+      background-color: #2cc04f;
       color: #fff;
       padding: 6px 0;
       border: solid 1px #3333331c;
@@ -122,7 +122,7 @@ p{
   height: 100vh;
   overflow: hidden;
   position: relative;
-  background-image: url('../.../../../../../assets/PANTALLA_INICIO_AMBIEFAC.jpg');
+  background-image: url('../.../../../../../assets/Inicio.jpg');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -134,7 +134,7 @@ p{
   bottom: 20px;
   right: 20px;
   padding: 10px;
-  background-color: #33cc57;
+  background-color: #2cc04f;
   color: white;
   border: none;
   border-radius: 5px;
