--- a/src/app/feature/home/temas-inscripcion/temas-inscripcion.component.scss
+++ b/src/app/feature/home/temas-inscripcion/temas-inscripcion.component.scss
@@ -3,6 +3,9 @@ body {
     margin: 0;
     padding: 0;
 }
+.back{
+   background-color: purple; 
+}
 
 .header-topic {
     background-color: #f5f5f5;
@@ -23,7 +26,7 @@ body {
 }
 
 .tile-topic {
-    background-color: #33cc57;
+    background-color: #2cc04f;
     display: flex;
     flex-direction: column;
     height: 70vh;
@@ -72,6 +75,7 @@ body {
         flex-wrap: wrap;
         margin: 17px -25px 51px -39px;
         background: #fff;
+        
     }
 
     &-colum {
