--- a/src/app/feature/components/navbar/navbar.component.html
+++ b/src/app/feature/components/navbar/navbar.component.html
@@ -23,7 +23,7 @@
     </div>
   </ul>
   <div class="search-bar">
-    <input type="text" placeholder="Buscar..." [ngModel]="terminoBusqueda" (input)="buscarEnTiempoReal()">
+    <input type="text" placeholder="Buscar..." [(ngModel)]="terminoBusqueda" (input)="buscarEnTiempoReal()">
     <div *ngIf="resultadosBusqueda.length > 0 && terminoBusqueda.length > 0"
       class="bg-white fixed width-30 top-[4rem] focus:outline-none mt-2 origin-top-left ring-1 ring-black ring-opacity-5 rounded-md shadow-lg">
       <div class="py-1" role="none">
